# Tasks

./: README.md  package.json
.meteor/: .id  packages  versions
c/: CMakeLists.txt  README.md  main.c
c/config/: config.h
c/includes/: version.h
c/project/: CMakeLists.txt  project.c  project.h
c/project_new_ui/: CMakeLists.txt  project_new_ui.c  project_new_ui.h
c/projects_list/: CMakeLists.txt  projects_list.c  projects_list.h
c/projects_list_ui/: CMakeLists.txt  projects_list_ui.c  projects_list_ui.h
client/: main.css  main.html
imports/api/projects/: methods.js
imports/api/projects/server/: publications.js
imports/api/tasks/: .tasks.js.swp  methods.js  tasks.js
imports/api/tasks/server/: publications.js
imports/startup/client/: routes.js
imports/startup/server/: fixtures.js  index.js  register-api.js
imports/ui/components/: header.html  splash.html  splash_projects.html
imports/ui/layouts/: accounts_layout.html  main_layout.html  main_layout.js
imports/ui/templates/errors/: errors.html  errors.js
imports/ui/templates/login/: login.html  login.js
imports/ui/templates/projects/: project_item.html  project_item.js  projects.html  projects.js
imports/ui/templates/register/: register.html  register.js
imports/ui/templates/tasks/: task_item.html  task_item.js  tasks.html  tasks.js
meteor/: README.md
meteor/.meteor/: packages  versions
meteor/client/: main.css
meteor/imports/api/projects/: projects.js
meteor/imports/api/tasks/: methods.js
meteor/imports/api/users/: methods.js
meteor/imports/startup/client/: routes.js
(+11 files in other folders)
